--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,7 +5,9 @@ def plugins = new Properties()
 def pluginsFile = new File(flutterProjectRoot.toFile(), '.flutter-plugins')
 
 if(pluginsFile.exists()) {
-    pluginsFile.withReader('UTF-8') { reader -> plugins.load(reader) }
+    pluginsFile.withReader('UTF-8') {
+        reader -> plugins.load(reader)
+    }
 }
 
 plugins.each { name, path ->
