--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:targetSdkVersion="28" />
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="whoisit"
+        android:label="Whoisit"
         android:name="io.flutter.app.FlutterApplication">
         <activity
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density"
