--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,26 +1,33 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.stevenortiz.whoisit"
     android:versionCode="2"
-    android:versionName="1.1">
+    android:versionName="1.1"
+>
     <uses-permission
-        android:name="android.permission.INTERNET" />
+        android:name="android.permission.INTERNET"
+    />
     <uses-sdk
         android:minSdkVersion="21"
-        android:targetSdkVersion="28" />
+        android:targetSdkVersion="28"
+    />
     <application
         android:icon="@drawable/ic_launcher"
         android:label="Whoisit"
-        android:name="io.flutter.app.FlutterApplication">
+        android:name="io.flutter.app.FlutterApplication"
+    >
         <activity
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density"
             android:hardwareAccelerated="true"
             android:launchMode="singleTop"
             android:name=".MainActivity"
             android:theme="@style/LaunchTheme"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize"
+        >
             <meta-data
                 android:name="io.flutter.app.android.SplashScreenUntilFirstFrame"
-                android:value="true" />
+                android:value="true"
+            />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
