--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ dependencies:
   flutter:
     sdk: flutter
   path: ^1.6.2
-  path_provider: ^0.4.1
+  path_provider: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test: ^1.5.1+1
+  test: ^1.6.1
 
 flutter:
   fonts:
