--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,5 @@
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file("local.properties")
-
 if(localPropertiesFile.exists()) {
     localPropertiesFile.withReader("UTF-8") { reader ->
         localProperties.load(reader)
@@ -8,9 +7,18 @@ if(localPropertiesFile.exists()) {
 }
 
 def flutterRoot = localProperties.getProperty("flutter.sdk")
-
 if(flutterRoot == null) {
     throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+}
+
+def flutterVersionCode = localProperties.getProperty("flutter.versionCode")
+if(flutterVersionCode == null) {
+    flutterVersionCode = "1"
+}
+
+def flutterVersionName = localProperties.getProperty("flutter.versionName")
+if(flutterVersionName == null) {
+    flutterVersionName = "1.0"
 }
 
 def keystoreProperties = new Properties()
@@ -18,24 +26,20 @@ def keystorePropertiesFile = rootProject.file("key.properties")
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 apply plugin: "com.android.application"
-apply plugin: "kotlin-android"
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 28
-    sourceSets {
-        main.java.srcDirs += "src/main/kotlin"
-    }
     lintOptions {
         disable "InvalidPackage"
     }
     defaultConfig {
         applicationId "me.stevenortiz.whoisit"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 28
-        versionCode 3
-        versionName "1.2"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        versionCode flutterVersionCode.toInteger()
+        versionName flutterVersionName
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     signingConfigs {
        release {
@@ -60,8 +64,7 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     testImplementation "junit:junit:4.12"
-    androidTestImplementation "com.android.support.test:runner:1.0.2"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
+    androidTestImplementation "androidx.test:runner:1.1.1"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.1"
 }
