--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,15 +1,9 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="3"
-    android:versionName="1.2"
     package="me.stevenortiz.whoisit"
 >
     <uses-permission
         android:name="android.permission.INTERNET"
-    />
-    <uses-sdk
-        android:minSdkVersion="21"
-        android:targetSdkVersion="28"
     />
     <application
         android:icon="@drawable/ic_launcher"
@@ -17,7 +11,7 @@
         android:name="io.flutter.app.FlutterApplication"
     >
         <activity
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
             android:launchMode="singleTop"
             android:name=".MainActivity"
