--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,14 +29,14 @@ apply plugin: "com.android.application"
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     lintOptions {
         disable "InvalidPackage"
     }
     defaultConfig {
         applicationId "me.stevenortiz.whoisit"
         minSdkVersion 26
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -51,10 +51,10 @@ android {
     }
     buildTypes {
         release {
-            signingConfig signingConfigs.release
+            useProguard false
             minifyEnabled true
-            useProguard true
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            shrinkResources true
+            signingConfig signingConfigs.release
         }
     }
 }
