--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.stevenortiz.whoisit">
+    package="me.stevenortiz.whoisit"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission
         android:name="android.permission.INTERNET" />
     <application
